[package]
name = "my-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version="0.6.0-rc.1", features = ["ws"] }
futures = "0.3"
tokio = { version = "1", features = ["full", "sync"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
csv = "1.1.6"
rand = "0.8.5"
axum-macros = "0.2.3"